src/css/components/po-listbox/po-listbox.css
.po-listbox {
  border-radius: var(--border-radius);
  border-width: var(--border-width);
  border-color: var(--border-color);
  background-color: var(--background);
  box-shadow: var(--shadow);

  border-style: solid;

  overflow: hidden;
  position: fixed;
  z-index: 1000;

  &.po-listbox-check {
    display: flex;
    flex-direction: column;
    position: static;
  }

  &[hidden] {
    display: flex !important;
  }
}

.po-listbox-container-search {
  padding-inline: var(--spacing-sm);
  padding-block: var(--spacing-sm) var(--spacing-xs);
}

po-search-list[p-size='small'] .po-field-container-input.po-listbox-container-search {
  padding-inline: var(--spacing-xs);
  padding-block: var(--spacing-xs) var(--spacing-xxs);
}

.po-listbox-list {
  list-style: none;
  max-height: inherit;
  overflow-y: auto;
  padding-block: var(--spacing-xs);
}

po-listbox[p-size='small'] .po-listbox-list {
  padding-block: var(--spacing-xxs);
}

.po-listbox-container-loading-default {
  height: 138px;
}

.po-listbox-container-no-data {
  padding: var(--target-size-aaa) 0;
  line-height: var(--line-height-md);
  font-size: var(--font-size-sm);
  font-weight: var(--font-weight-bold);
}

po-listbox[p-size='small'] .po-listbox-container-no-data {
  padding: var(--target-size-aa) 0;
  font-size: var(--font-size-xs);
  font-weight: var(--font-weight-semibold);
}

/*------------------------------------*\
  PO-LISTBOX DO PO-DROPDOWN
\*------------------------------------*/

.po-listbox-group-header {
  cursor: pointer;
  display: flex;
  align-items: center;

  padding: 0 var(--spacing-sm);
  gap: var(--spacing-xs);
  height: var(--target-size-aaa);
  min-height: var(--target-size-aaa);
  border-bottom: 1px solid var(--color-neutral-light-20);
  background-color: var(--color-brand-01-lightest);

  &:hover {
    background-color: var(--color-brand-01-lighter);
    border-bottom: 1px solid var(--color-neutral-light-20);
    po-icon.po-field-icon i {
      color: var(--color-brand-01-darker);
    }
  }
}

po-listbox[p-size='small'] .po-listbox-group-header {
  min-height: var(--target-size-aa);
  height: var(--target-size-aa);
  padding: 0 var(--spacing-xs);
  gap: 4px;
}

.po-listbox-group-header .po-tag {
  color: var(--color-neutral-light-00);
  background-color: var(--color-action-default);
  padding: 0 var(--spacing-xs);
  gap: var(--spacing-xs);
}

.po-listbox-group-header i {
  font-size: var(--font-size-lg);
  color: var(--color-brand-01-base);
}

po-listbox[p-size='small'] .po-listbox-group-header i {
  font-size: var(--font-size-default);
}

.cdk-option:focus-visible.po-listbox-group-header {
  outline-color: var(--color-action-focus);
  outline-width: var(--border-width-lg);
  outline-style: solid;
  outline-offset: -4px;
  border-radius: var(--border-radius-md);
}

.cdk-option:focus-visible.po-listbox-group-header {
  outline-width: var(--border-width-md);
  outline-offset: -2px;
}

.po-item-list__danger:not(.po-item-list__disabled) .po-field-icon {
  color: var(--color-feedback-negative-base);
}

.po-item-list__disabled .po-field-icon {
  color: var(--color-disabled);
}

.po-listbox-dropdown .po-item-list:not(.po-item-list__danger):not(.po-item-list__disabled) i {
  color: var(--color-action-default);
}

.po-listbox-dropdown .po-item-list:not(.po-item-list__disabled) {
  border-radius: var(--border-radius-md);
  color: var(--color-brand-01-base);
}

po-listbox[p-size='small'] .po-listbox-dropdown .po-item-list {
  min-height: var(--target-size-aa);
  gap: 4px;
  font-size: var(--font-size-sm);
}

.po-listbox-dropdown .po-listbox-item-sub .po-item-list:not(.po-item-list__danger):not(.po-item-list__disabled):hover {
  background-color: var(--color-brand-01-lighter);
  color: var(--color-brand-01-darker);
}

.po-listbox-dropdown .po-item-list:not(.po-item-list__danger):not(.po-item-list__disabled):hover i {
  color: var(--color-brand-01-darker);
}

.po-listbox-dropdown .cdk-option:focus-visible .po-item-list {
  outline-offset: -4px;
}

.po-listbox-dropdown .cdk-option:focus-visible .po-item-list {
  outline-offset: -2px;
}

.po-listbox-dropdown :active:is(.po-item-list__action, .po-item-list__option).po-item-list__danger {
  outline-color: var(--color-action-focus);
  outline-width: var(--border-width-lg);
  outline-style: solid;
  outline-offset: -2px;
}

.po-listbox-dropdown :active:is(.po-item-list__action, .po-item-list__option).po-item-list__danger {
  outline-width: var(--border-width-md);
}

.po-listbox-dropdown .po-popup-icon-item-right {
  margin-left: auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.po-listbox-dropdown .po-listbox-item-sub .po-item-list__selected:not(.po-item-list__danger) {
  background-color: var(--color-brand-01-lighter);
  color: var(--color-brand-01-darker);
}

po-listbox[p-size='small'] .po-listbox-dropdown .po-item-list .po-field-icon {
  font-size: var(--font-size-default);
}

